--- a/V_Aggregation_and_Initial_Feature_Selection.ipynb
+++ b/V_Aggregation_and_Initial_Feature_Selection.ipynb
@@ -174,7 +174,7 @@
       "source": [
         "%%bigquery data --project $project_name\n",
         "SELECT *\n",
-        "FROM `adl-analytics.public_sample_data.ga4_step_3_colab` # update with your project and dataset name"
+        "FROM `adl-analytics.public_sample_data.churn_ga4_3` # update with your dataset and table name"
       ]
     },
     {
@@ -5238,7 +5238,7 @@
       ],
       "source": [
         "client = bigquery.Client(project = project_name)\n",
-        "table_id = 'public_sample_data.ga4_step_5_colab' # update with your project and dataset name\n",
+        "table_id = 'public_sample_data.churn_ga4_5' # update with your dataset and table name\n",
         "    \n",
         "job_config = bigquery.LoadJobConfig(\n",
         "    write_disposition = bigquery.job.WriteDisposition.WRITE_TRUNCATE\n",
