--- a/I_Setup_&_EDA.ipynb
+++ b/I_Setup_&_EDA.ipynb
@@ -83,12 +83,12 @@
         "id": "E7mJ0N1c7U1v"
       },
       "id": "E7mJ0N1c7U1v",
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "bd19d2e3-d7f3-409b-a045-9a08a33e4013",
       "metadata": {
         "id": "bd19d2e3-d7f3-409b-a045-9a08a33e4013"
@@ -137,12 +137,15 @@
         "We'll be using a publicly available sample table from GA4, containing event export data for three months from 2020-11-01 to 2021-01-31. <br>\n",
         "Additional details on the sample data from Google can be found [here](https://developers.google.com/analytics/bigquery/web-ecommerce-demo-dataset).\n",
         "\n",
-        "If your dataset is too large to pull in everything, you can add more CPUs by upgrading Colab, or use JupyterLabs within the Vertex AI Workbench. Read more about [Vertex AI pricing](https://cloud.google.com/vertex-ai/pricing) and the [Pricing Calculator](https://cloud.google.com/products/calculator/)."
+        "If your dataset is too large to pull in everything, you can:\n",
+        "1. limit the EDA import to a select number of rows (see commented line at the end of the next code cell),\n",
+        "2. add more CPUs by upgrading Colab, or\n",
+        "3. use JupyterLabs within the Vertex AI Workbench. Read more about [Vertex AI pricing](https://cloud.google.com/vertex-ai/pricing) and the [Pricing Calculator](https://cloud.google.com/products/calculator/)."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "de3937c1-5cfb-423f-b490-f58084053c32",
       "metadata": {
         "id": "de3937c1-5cfb-423f-b490-f58084053c32",
@@ -209,12 +212,13 @@
       "source": [
         "%%bigquery data --project $project_name\n",
         "SELECT *\n",
-        "FROM `bigquery-public-data.ga4_obfuscated_sample_ecommerce.events_*`"
+        "FROM `bigquery-public-data.ga4_obfuscated_sample_ecommerce.events_*`\n",
+        "-- LIMIT 100000"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "f4058f41-90d6-4519-b703-b8ceb7561eff",
       "metadata": {
         "id": "f4058f41-90d6-4519-b703-b8ceb7561eff"
@@ -237,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "8a48e670-0843-45d9-a810-843fce2a870d",
       "metadata": {
         "id": "8a48e670-0843-45d9-a810-843fce2a870d",
@@ -591,7 +595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "be12ec89-cb71-4799-99f5-10a9ade1d959",
       "metadata": {
         "id": "be12ec89-cb71-4799-99f5-10a9ade1d959",
@@ -631,7 +635,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "cf458627-9be0-4acd-b54e-59e85033756f",
       "metadata": {
         "id": "cf458627-9be0-4acd-b54e-59e85033756f",
@@ -705,7 +709,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "1f5391c1-0e67-47da-b6d7-088a72a41724",
       "metadata": {
         "id": "1f5391c1-0e67-47da-b6d7-088a72a41724",
@@ -773,7 +777,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "b6fdb2be-fd98-409a-b514-75254bf9aebb",
       "metadata": {
         "id": "b6fdb2be-fd98-409a-b514-75254bf9aebb",
@@ -848,7 +852,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "e67e31e4-35f4-4ebd-9636-670ae60f6faf",
       "metadata": {
         "id": "e67e31e4-35f4-4ebd-9636-670ae60f6faf"
@@ -861,7 +865,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "25db1460-49b2-49e6-a943-2b4f5ca2079c",
       "metadata": {
         "id": "25db1460-49b2-49e6-a943-2b4f5ca2079c",
@@ -909,7 +913,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "0fe205de-eaa5-40b6-944e-9d1bfecac8c9",
       "metadata": {
         "id": "0fe205de-eaa5-40b6-944e-9d1bfecac8c9",
@@ -939,7 +943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "0df51285-c654-4a2b-824a-e0286a5eb311",
       "metadata": {
         "id": "0df51285-c654-4a2b-824a-e0286a5eb311",
@@ -969,7 +973,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "b89655e5-4c07-404b-88fd-6169d95923d1",
       "metadata": {
         "id": "b89655e5-4c07-404b-88fd-6169d95923d1",
@@ -1040,7 +1044,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "6907d743-2f64-4c7a-97b5-52502e1eb61f",
       "metadata": {
         "id": "6907d743-2f64-4c7a-97b5-52502e1eb61f"
@@ -1053,7 +1057,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "id": "8340b95b-4fcc-4fd3-bc03-80ee1afc4fbb",
       "metadata": {
         "id": "8340b95b-4fcc-4fd3-bc03-80ee1afc4fbb",
@@ -1092,7 +1096,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "a30e157b-0186-4518-ac45-0062218328ab",
       "metadata": {
         "id": "a30e157b-0186-4518-ac45-0062218328ab",
@@ -1201,7 +1205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "1166845d-b269-41f4-8512-628133e0a349",
       "metadata": {
         "id": "1166845d-b269-41f4-8512-628133e0a349",
@@ -1273,7 +1277,6 @@
     },
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "accelerator": "GPU",
