--- a/II_Array_Flattening_and_EDA_Part_2.ipynb
+++ b/II_Array_Flattening_and_EDA_Part_2.ipynb
@@ -113,7 +113,9 @@
         "id": "6f43a19b-eb93-40d1-8158-8a1522d6821c"
       },
       "source": [
-        "## Import data from BigQuery for users who have made at least one purchase"
+        "## Import data from BigQuery for users who have made at least one purchase\n",
+        "\n",
+        "Note: if you imported only a sample of the full dataset in the last notebook, you'll need to replace the table names below with the original dataset and table name."
       ]
     },
     {
